--- a/qt project/build-soduku-solver-Desktop_Qt_5_7_0_GCC_64bit-Debug/Makefile
+++ b/qt project/build-soduku-solver-Desktop_Qt_5_7_0_GCC_64bit-Debug/Makefile
@@ -211,7 +211,6 @@ DIST          = images/brain.png \
 		../Qt/5.7/gcc_64/mkspecs/features/qt_config.prf \
 		../Qt/5.7/gcc_64/mkspecs/linux-g++/qmake.conf \
 		../Qt/5.7/gcc_64/mkspecs/features/spec_post.prf \
-		../soduku-solver/.qmake.stash \
 		../Qt/5.7/gcc_64/mkspecs/features/exclusive_builds.prf \
 		../Qt/5.7/gcc_64/mkspecs/features/default_pre.prf \
 		../Qt/5.7/gcc_64/mkspecs/features/resolve_config.prf \
@@ -385,7 +384,6 @@ Makefile: ../soduku-solver/soduku-solver.pro ../Qt/5.7/gcc_64/mkspecs/linux-g++/
 		../Qt/5.7/gcc_64/mkspecs/features/qt_config.prf \
 		../Qt/5.7/gcc_64/mkspecs/linux-g++/qmake.conf \
 		../Qt/5.7/gcc_64/mkspecs/features/spec_post.prf \
-		.qmake.stash \
 		../Qt/5.7/gcc_64/mkspecs/features/exclusive_builds.prf \
 		../Qt/5.7/gcc_64/mkspecs/features/default_pre.prf \
 		../Qt/5.7/gcc_64/mkspecs/features/resolve_config.prf \
@@ -540,7 +538,6 @@ Makefile: ../soduku-solver/soduku-solver.pro ../Qt/5.7/gcc_64/mkspecs/linux-g++/
 ../Qt/5.7/gcc_64/mkspecs/features/qt_config.prf:
 ../Qt/5.7/gcc_64/mkspecs/linux-g++/qmake.conf:
 ../Qt/5.7/gcc_64/mkspecs/features/spec_post.prf:
-.qmake.stash:
 ../Qt/5.7/gcc_64/mkspecs/features/exclusive_builds.prf:
 ../Qt/5.7/gcc_64/mkspecs/features/default_pre.prf:
 ../Qt/5.7/gcc_64/mkspecs/features/resolve_config.prf:
@@ -1627,48 +1624,6 @@ mainwindow.o: ../soduku-solver/mainwindow.cpp ../soduku-solver/mainwindow.h \
 		../soduku-solver/aboutmainwindow.h \
 		../soduku-solver/helpmainwindow.h \
 		ui_mainwindow.h \
-		../Qt/5.7/gcc_64/include/QtCore/QVariant \
-		../Qt/5.7/gcc_64/include/QtWidgets/QAction \
-		../Qt/5.7/gcc_64/include/QtWidgets/qaction.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qactiongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QApplication \
-		../Qt/5.7/gcc_64/include/QtWidgets/qapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qcoreapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qeventloop.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qdesktopwidget.h \
-		../Qt/5.7/gcc_64/include/QtGui/qguiapplication.h \
-		../Qt/5.7/gcc_64/include/QtGui/qinputmethod.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QButtonGroup \
-		../Qt/5.7/gcc_64/include/QtWidgets/qbuttongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QFrame \
-		../Qt/5.7/gcc_64/include/QtWidgets/qframe.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QHeaderView \
-		../Qt/5.7/gcc_64/include/QtWidgets/qheaderview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractscrollarea.h \
-		../Qt/5.7/gcc_64/include/QtCore/qabstractitemmodel.h \
-		../Qt/5.7/gcc_64/include/QtCore/qitemselectionmodel.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemdelegate.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyleoption.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractspinbox.h \
-		../Qt/5.7/gcc_64/include/QtGui/qvalidator.h \
-		../Qt/5.7/gcc_64/include/QtCore/qregularexpression.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyle.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qrubberband.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QLabel \
-		../Qt/5.7/gcc_64/include/QtWidgets/qlabel.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QMenuBar \
-		../Qt/5.7/gcc_64/include/QtWidgets/qmenubar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qmenu.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QPushButton \
-		../Qt/5.7/gcc_64/include/QtWidgets/qpushbutton.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractbutton.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QStatusBar \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstatusbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QWidget \
 		../Qt/5.7/gcc_64/include/QtGui/QPixmap
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindow.o ../soduku-solver/mainwindow.cpp
 
@@ -1779,55 +1734,14 @@ secmainwindow.o: ../soduku-solver/secmainwindow.cpp ../soduku-solver/secmainwind
 		../soduku-solver/successdialog.h \
 		../soduku-solver/infodialog.h \
 		ui_secmainwindow.h \
-		../Qt/5.7/gcc_64/include/QtCore/QVariant \
-		../Qt/5.7/gcc_64/include/QtWidgets/QAction \
-		../Qt/5.7/gcc_64/include/QtWidgets/qaction.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qactiongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QApplication \
-		../Qt/5.7/gcc_64/include/QtWidgets/qapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qcoreapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qeventloop.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qdesktopwidget.h \
-		../Qt/5.7/gcc_64/include/QtGui/qguiapplication.h \
-		../Qt/5.7/gcc_64/include/QtGui/qinputmethod.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QButtonGroup \
-		../Qt/5.7/gcc_64/include/QtWidgets/qbuttongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QFrame \
-		../Qt/5.7/gcc_64/include/QtWidgets/qframe.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QHeaderView \
-		../Qt/5.7/gcc_64/include/QtWidgets/qheaderview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractscrollarea.h \
-		../Qt/5.7/gcc_64/include/QtCore/qabstractitemmodel.h \
-		../Qt/5.7/gcc_64/include/QtCore/qitemselectionmodel.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemdelegate.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyleoption.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractspinbox.h \
-		../Qt/5.7/gcc_64/include/QtGui/qvalidator.h \
-		../Qt/5.7/gcc_64/include/QtCore/qregularexpression.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyle.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qrubberband.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QLabel \
-		../Qt/5.7/gcc_64/include/QtWidgets/qlabel.h \
+		../Qt/5.7/gcc_64/include/QtGui/QPixmap \
 		../Qt/5.7/gcc_64/include/QtWidgets/QLineEdit \
 		../Qt/5.7/gcc_64/include/QtWidgets/qlineedit.h \
+		../Qt/5.7/gcc_64/include/QtWidgets/qframe.h \
 		../Qt/5.7/gcc_64/include/QtGui/qtextcursor.h \
 		../Qt/5.7/gcc_64/include/QtGui/qtextformat.h \
 		../Qt/5.7/gcc_64/include/QtGui/qpen.h \
-		../Qt/5.7/gcc_64/include/QtGui/qtextoption.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QMenuBar \
-		../Qt/5.7/gcc_64/include/QtWidgets/qmenubar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qmenu.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QPushButton \
-		../Qt/5.7/gcc_64/include/QtWidgets/qpushbutton.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractbutton.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QStatusBar \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstatusbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QWidget \
-		../Qt/5.7/gcc_64/include/QtGui/QPixmap
+		../Qt/5.7/gcc_64/include/QtGui/qtextoption.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o secmainwindow.o ../soduku-solver/secmainwindow.cpp
 
 alertdialog.o: ../soduku-solver/alertdialog.cpp ../soduku-solver/alertdialog.h \
@@ -1930,40 +1844,6 @@ alertdialog.o: ../soduku-solver/alertdialog.cpp ../soduku-solver/alertdialog.h \
 		../Qt/5.7/gcc_64/include/QtGui/qvector2d.h \
 		../Qt/5.7/gcc_64/include/QtGui/qtouchdevice.h \
 		ui_alertdialog.h \
-		../Qt/5.7/gcc_64/include/QtCore/QVariant \
-		../Qt/5.7/gcc_64/include/QtWidgets/QAction \
-		../Qt/5.7/gcc_64/include/QtWidgets/qaction.h \
-		../Qt/5.7/gcc_64/include/QtGui/qicon.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qactiongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QApplication \
-		../Qt/5.7/gcc_64/include/QtWidgets/qapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qcoreapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qeventloop.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qdesktopwidget.h \
-		../Qt/5.7/gcc_64/include/QtGui/qguiapplication.h \
-		../Qt/5.7/gcc_64/include/QtGui/qinputmethod.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QButtonGroup \
-		../Qt/5.7/gcc_64/include/QtWidgets/qbuttongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QHeaderView \
-		../Qt/5.7/gcc_64/include/QtWidgets/qheaderview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractscrollarea.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qframe.h \
-		../Qt/5.7/gcc_64/include/QtCore/qabstractitemmodel.h \
-		../Qt/5.7/gcc_64/include/QtCore/qitemselectionmodel.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemdelegate.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyleoption.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractspinbox.h \
-		../Qt/5.7/gcc_64/include/QtGui/qvalidator.h \
-		../Qt/5.7/gcc_64/include/QtCore/qregularexpression.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyle.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabwidget.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qrubberband.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QLabel \
-		../Qt/5.7/gcc_64/include/QtWidgets/qlabel.h \
 		../Qt/5.7/gcc_64/include/QtGui/QPixmap
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o alertdialog.o ../soduku-solver/alertdialog.cpp
 
@@ -2067,40 +1947,6 @@ successdialog.o: ../soduku-solver/successdialog.cpp ../soduku-solver/successdial
 		../Qt/5.7/gcc_64/include/QtGui/qvector2d.h \
 		../Qt/5.7/gcc_64/include/QtGui/qtouchdevice.h \
 		ui_successdialog.h \
-		../Qt/5.7/gcc_64/include/QtCore/QVariant \
-		../Qt/5.7/gcc_64/include/QtWidgets/QAction \
-		../Qt/5.7/gcc_64/include/QtWidgets/qaction.h \
-		../Qt/5.7/gcc_64/include/QtGui/qicon.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qactiongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QApplication \
-		../Qt/5.7/gcc_64/include/QtWidgets/qapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qcoreapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qeventloop.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qdesktopwidget.h \
-		../Qt/5.7/gcc_64/include/QtGui/qguiapplication.h \
-		../Qt/5.7/gcc_64/include/QtGui/qinputmethod.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QButtonGroup \
-		../Qt/5.7/gcc_64/include/QtWidgets/qbuttongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QHeaderView \
-		../Qt/5.7/gcc_64/include/QtWidgets/qheaderview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractscrollarea.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qframe.h \
-		../Qt/5.7/gcc_64/include/QtCore/qabstractitemmodel.h \
-		../Qt/5.7/gcc_64/include/QtCore/qitemselectionmodel.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemdelegate.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyleoption.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractspinbox.h \
-		../Qt/5.7/gcc_64/include/QtGui/qvalidator.h \
-		../Qt/5.7/gcc_64/include/QtCore/qregularexpression.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyle.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabwidget.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qrubberband.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QLabel \
-		../Qt/5.7/gcc_64/include/QtWidgets/qlabel.h \
 		../Qt/5.7/gcc_64/include/QtGui/QPixmap
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o successdialog.o ../soduku-solver/successdialog.cpp
 
@@ -2203,41 +2049,7 @@ infodialog.o: ../soduku-solver/infodialog.cpp ../soduku-solver/infodialog.h \
 		../Qt/5.7/gcc_64/include/QtCore/qfiledevice.h \
 		../Qt/5.7/gcc_64/include/QtGui/qvector2d.h \
 		../Qt/5.7/gcc_64/include/QtGui/qtouchdevice.h \
-		ui_infodialog.h \
-		../Qt/5.7/gcc_64/include/QtCore/QVariant \
-		../Qt/5.7/gcc_64/include/QtWidgets/QAction \
-		../Qt/5.7/gcc_64/include/QtWidgets/qaction.h \
-		../Qt/5.7/gcc_64/include/QtGui/qicon.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qactiongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QApplication \
-		../Qt/5.7/gcc_64/include/QtWidgets/qapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qcoreapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qeventloop.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qdesktopwidget.h \
-		../Qt/5.7/gcc_64/include/QtGui/qguiapplication.h \
-		../Qt/5.7/gcc_64/include/QtGui/qinputmethod.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QButtonGroup \
-		../Qt/5.7/gcc_64/include/QtWidgets/qbuttongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QHeaderView \
-		../Qt/5.7/gcc_64/include/QtWidgets/qheaderview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractscrollarea.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qframe.h \
-		../Qt/5.7/gcc_64/include/QtCore/qabstractitemmodel.h \
-		../Qt/5.7/gcc_64/include/QtCore/qitemselectionmodel.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemdelegate.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyleoption.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractspinbox.h \
-		../Qt/5.7/gcc_64/include/QtGui/qvalidator.h \
-		../Qt/5.7/gcc_64/include/QtCore/qregularexpression.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyle.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabwidget.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qrubberband.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QLabel \
-		../Qt/5.7/gcc_64/include/QtWidgets/qlabel.h
+		ui_infodialog.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o infodialog.o ../soduku-solver/infodialog.cpp
 
 aboutmainwindow.o: ../soduku-solver/aboutmainwindow.cpp ../soduku-solver/aboutmainwindow.h \
@@ -2341,46 +2153,7 @@ aboutmainwindow.o: ../soduku-solver/aboutmainwindow.cpp ../soduku-solver/aboutma
 		../Qt/5.7/gcc_64/include/QtGui/qtouchdevice.h \
 		../Qt/5.7/gcc_64/include/QtWidgets/qtabwidget.h \
 		../Qt/5.7/gcc_64/include/QtGui/qicon.h \
-		ui_aboutmainwindow.h \
-		../Qt/5.7/gcc_64/include/QtCore/QVariant \
-		../Qt/5.7/gcc_64/include/QtWidgets/QAction \
-		../Qt/5.7/gcc_64/include/QtWidgets/qaction.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qactiongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QApplication \
-		../Qt/5.7/gcc_64/include/QtWidgets/qapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qcoreapplication.h \
-		../Qt/5.7/gcc_64/include/QtCore/qeventloop.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qdesktopwidget.h \
-		../Qt/5.7/gcc_64/include/QtGui/qguiapplication.h \
-		../Qt/5.7/gcc_64/include/QtGui/qinputmethod.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QButtonGroup \
-		../Qt/5.7/gcc_64/include/QtWidgets/qbuttongroup.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QFrame \
-		../Qt/5.7/gcc_64/include/QtWidgets/qframe.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QHeaderView \
-		../Qt/5.7/gcc_64/include/QtWidgets/qheaderview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemview.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractscrollarea.h \
-		../Qt/5.7/gcc_64/include/QtCore/qabstractitemmodel.h \
-		../Qt/5.7/gcc_64/include/QtCore/qitemselectionmodel.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractitemdelegate.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyleoption.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractspinbox.h \
-		../Qt/5.7/gcc_64/include/QtGui/qvalidator.h \
-		../Qt/5.7/gcc_64/include/QtCore/qregularexpression.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qabstractslider.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstyle.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qtabbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qrubberband.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QLabel \
-		../Qt/5.7/gcc_64/include/QtWidgets/qlabel.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QMenuBar \
-		../Qt/5.7/gcc_64/include/QtWidgets/qmenubar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/qmenu.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QStatusBar \
-		../Qt/5.7/gcc_64/include/QtWidgets/qstatusbar.h \
-		../Qt/5.7/gcc_64/include/QtWidgets/QWidget
+		ui_aboutmainwindow.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o aboutmainwindow.o ../soduku-solver/aboutmainwindow.cpp
 
 helpmainwindow.o: ../soduku-solver/helpmainwindow.cpp ../soduku-solver/helpmainwindow.h \
